completed functionality and mobile styling for checkout page. left comments where necessary and removed display for About page in header and modal menu for a better user experience. Added border to Shop on tablet in header to match design on other side of page and added thank you page + styling. Tested checkout process to ensure it works

--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -33,7 +33,7 @@
 
         &__wrapper {
             border-top: 1px solid darkgrey;
-            border-bottom: 1px solid darkgray;
+            // border-bottom: 1px solid darkgray; // When About page is in production, to be used for styling
             padding: 10px 0 10px 16px;
 
                 &-2 {
@@ -43,5 +43,6 @@
 
         &__heading-2 {
             padding: 10px 0 10px 16px;
+            display: none; //Hidden due to page not being active to prevent broken links in production
         }
 }
